--- a/RobotControl/Config/DefaultInput.ini
+++ b/RobotControl/Config/DefaultInput.ini
@@ -44,6 +44,9 @@ FOVScale=0.011110
 DoubleClickTime=0.200000
 +ActionMappings=(ActionName="LeftControllerAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Left_Trigger)
 +ActionMappings=(ActionName="RightControllerAction",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=MotionController_Right_Trigger)
++ActionMappings=(ActionName="TestButton",bShift=False,bCtrl=False,bAlt=False,bCmd=False,Key=T)
++AxisMappings=(AxisName="MouseX",Scale=1.000000,Key=MouseX)
++AxisMappings=(AxisName="MouseY",Scale=1.000000,Key=MouseY)
 DefaultTouchInterface=/Engine/MobileResources/HUD/DefaultVirtualJoysticks.DefaultVirtualJoysticks
 ConsoleKey=None
 -ConsoleKeys=Tilde
