--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,3 @@
 theme: jekyll-theme-cayman
+title: Parallax Inducing Camera Motion
+description: Understanding parallax cues and producing camera motions that induce them. 
